--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@whiskeysockets/baileys": "^6.7.5",
     "cookie": "^0.6.0",
     "mongoose": "^8.4.3",
+    "nanoid": "^5.0.7",
     "pino": "^9.2.0",
     "pino-pretty": "^11.2.1",
     "qrcode": "^1.5.3",
