--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie": "^0.6.0",
     "mongoose": "^8.4.4",
     "nanoid": "^5.0.7",
+    "openai": "^4.52.2",
     "pino": "^9.2.0",
     "pino-pretty": "^11.2.1",
     "qrcode": "^1.5.3",
