--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "type": "module",
   "scripts": {
     "start": "bun run biome check && bun _build && node --env-file=.env ./dist/server.js",
-    "_build": "rm -rf dist && bun ./build.ts",
-    "check": "bun run biome check && tsc --noEmit && bun check_up",
+    "_build": "rm -rf dist && bun ./build.ts && bun copy_vad",
+    "ci": "bun install && bun run biome check && tsc --noEmit && bun _build",
+    "check": "bun ci && bun check_up",
     "lint": "bun run biome check --write",
     "fix": "bun lint",
     "updates": "bun update --latest",
