--- a/.github/workflows/dependabot_patch_bun.yml
+++ b/.github/workflows/dependabot_patch_bun.yml
@@ -12,6 +12,7 @@ jobs:
     if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
+      - uses: cycodelabs/cimon-action@v0
       - uses: oven-sh/setup-bun@v2
       - uses: actions/checkout@v4
         with:
