--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -20,5 +20,6 @@ jobs:
     container:
       image: returntocorp/semgrep
     steps:
-    - uses: actions/checkout@v3
+    - uses: cycodelabs/cimon-action@v0
+    - uses: actions/checkout@v4
     - run: semgrep ci
