--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,6 +10,9 @@ permissions:
   contents: read
   pull-requests: write
 
+env:
+  REPORTER_TYPE: ${{ github.event_name == 'pull_request' && 'github-pr-review' || 'github-check' }}
+
 jobs:
   biome:
     runs-on: ubuntu-latest
@@ -22,16 +25,18 @@ jobs:
       - uses: mongolyy/reviewdog-action-biome@v1
         with:
           fail_on_error: true
+          reporter: ${{ env.REPORTER_TYPE }}
 
   tsc:
     runs-on: ubuntu-latest
     steps:
       - uses: cycodelabs/cimon-action@v0
       - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
       - run: bun install
       - uses: EPMatt/reviewdog-action-tsc@v1
         with:
-          reporter: github-pr-review
+          reporter: ${{ env.REPORTER_TYPE }}
 
   misspell:
     runs-on: ubuntu-latest
@@ -41,6 +46,8 @@ jobs:
         uses: actions/checkout@v4
       - name: misspell
         uses: reviewdog/action-misspell@v1
+        with:
+          reporter: ${{ env.REPORTER_TYPE }}
 
   typos:
     runs-on: ubuntu-latest
@@ -48,17 +55,20 @@ jobs:
       - uses: cycodelabs/cimon-action@v0
       - uses: actions/checkout@v4
       - uses: reviewdog/action-typos@v1
+        with:
+          reporter: ${{ env.REPORTER_TYPE }}
 
   stylelint:
     runs-on: ubuntu-latest
     steps:
       - uses: cycodelabs/cimon-action@v0
       - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
       - run: bun add stylelint stylelint-config-recommended -D
       - name: stylelint
         uses: reviewdog/action-stylelint@v1
         with:
-          reporter: github-pr-review
+          reporter: ${{ env.REPORTER_TYPE }}
 
   actionlint:
     runs-on: ubuntu-latest
@@ -67,7 +77,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-actionlint@v1
         with:
-          reporter: github-pr-review
+          reporter: ${{ env.REPORTER_TYPE }}
 
   bearer:
     runs-on: ubuntu-latest
@@ -87,7 +97,8 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cat rd.json | reviewdog -f=rdjson -reporter=github-pr-review
+          cat rd.json | reviewdog -f=rdjson -reporter=${{ env.REPORTER_TYPE }}
+        #-level=error
 
 # check:
 #   runs-on: ubuntu-latest
