--- a/pages/manifest.json
+++ b/pages/manifest.json
@@ -22,17 +22,17 @@
     },
     {
       "src": "/opl-192x192.jpg",
-      "type": "image/jpg",
+      "type": "image/jpeg",
       "sizes": "192x192"
     },
     {
       "src": "/opl-512x512.jpg",
-      "type": "image/jpg",
+      "type": "image/jpeg",
       "sizes": "512x512"
     },
     {
       "src": "/opl-960x960.png",
-      "type": "image/jpg",
+      "type": "image/png",
       "sizes": "960x960"
     }
   ]
