--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@hapi/boom": "^10.0.1",
     "@types/bun": "^1.1.6",
     "@types/cookie": "^0.6.0",
     "@types/node": "^20.14.10",
