--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@bitwarden/sdk-napi": "^0.3.1",
     "@whiskeysockets/baileys": "^6.7.5",
     "cookie": "^0.6.0",
     "mongoose": "^8.5.2",
