--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "start": "bun run biome check && bun _build && node --env-file=.env ./dist/server.js",
     "_build": "rm -rf dist && bun ./build.ts",
-    "ci": "bun install && bun run biome check && tsc --noEmit && bun _build",
-    "check": "bun ci",
+    "checks": "bun install && bun run biome check && tsc --noEmit && bun _build",
+    "check": "bun checks",
     "lint": "bun run biome check --write",
     "fix": "bun lint",
     "updates": "bun update --latest",
