--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: mongolyy/reviewdog-action-biome@v2
         with:
-          fail_on_error: true
+          fail_level: 'error'
           reporter: ${{ env.REPORTER_TYPE }}
 
   tsc:
