--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
     "@types/qrcode": "^1.5.5",
     "typescript": "^5.9.2"
   },
-  "trustedDependencies": ["@biomejs/biome", "protobufjs"]
+  "trustedDependencies": ["@biomejs/biome", "@whiskeysockets/baileys", "protobufjs"]
 }
