--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "@hapi/boom": "^10.0.1",
     "@types/bun": "^1.2.20",
     "@types/cookie": "^1.0.0",
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
     "@types/qrcode": "^1.5.5",
     "typescript": "^5.9.2"
   },
-  "trustedDependencies": ["@biomejs/biome", "@whiskeysockets/baileys", "protobufjs"]
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@whiskeysockets/baileys",
+    "protobufjs"
+  ]
 }
