--- a/package.json
+++ b/package.json
@@ -27,20 +27,22 @@
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "qrcode": "^1.5.4",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "pm2": "6.0.10"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.2",
+    "@biomejs/biome": "2.2.4",
     "@hapi/boom": "^10.0.1",
-    "@types/bun": "^1.2.20",
+    "@types/bun": "^1.2.21",
     "@types/cookie": "^1.0.0",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.3.1",
     "@types/qrcode": "^1.5.5",
     "typescript": "^5.9.2"
   },
   "trustedDependencies": [
     "@biomejs/biome",
     "@whiskeysockets/baileys",
-    "protobufjs"
+    "protobufjs",
+    "sharp"
   ]
 }
